# grand-sim-pro

./: .gitignore  .~lock.telemetry.csv#  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DECISION_LOG.md  GEMINI.md  LICENSE  PERFORMANCE_LOG.md  full_shader.wgsl  package-lock.json  readme.md  server.py  sim_config.json  telemetry.csv
scripts/: test_perf.sh
src/: agent.rs  api.rs  config.rs  environment.rs  gpu_engine.rs  lib.rs  main.rs  shared.rs  sim.wgsl  sim_thread.rs  simulation.rs  telemetry.rs  ui.rs  ui_logic.rs
src/shaders/: bindings.wgsl  render.wgsl  sim.wgsl  types.wgsl  world.wgsl
tests/: api_verification.rs  end_to_end_telemetry.rs  integration_behavior.rs  neural_visualization.rs  performance.rs  performance_bottleneck.rs  persistence_verification.rs  soak_test.rs  ui_verification.rs
