[package]
name = "world_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
noise = "0.9.0"
rand = "0.8"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
wgpu = "22.1"
bytemuck = { version = "1.19", features = ["derive"] }
pollster = "0.3"
