[package]
name = "world_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
noise = "0.9.0"
rand = "0.8"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
wgpu = "22.1"
bytemuck = { version = "1.19", features = ["derive", "min_const_generics"] }
pollster = "0.3"
bincode = "1.3.3"
flate2 = "1.1.9"
zstd = { version = "0.13.3", features = ["zstdmt"] }
clap = { version = "4.6.1", features = ["derive"] }
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[features]
ui_testing = []
